--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,11 @@
     "koa-bodyparser": "^4.2.0",
     "koa-json": "^2.0.2",
     "koa-router": "^7.3.0",
-    "koa2": "^2.0.0-alpha.7"
+    "koa-timeout": "^0.1.1",
+    "koa2": "^2.0.0-alpha.7",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
+    "solc": "^0.4.24",
+    "web3": "0.19.0"
   }
 }
